# life-mirror-21f4f575

./: .env  BUILD.md  capacitor.config.ts  index.html  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: auto-tag.yml  build-android.yml  build-ios.yml  build-windows.yml
.lovable/: plan.md
public/: manifest.webmanifest  sw-push.js
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ApkUpdateDialog.tsx  Heatmap.tsx  ProtectedRoute.tsx  UpdateBanner.tsx  UpdateSection.tsx
src/lib/: apkDownloader.ts  auth.tsx  autoExtract.ts  deepLink.ts  demoData.ts  forecast.ts  haptics.ts  lifeMap.ts  logAuthEvent.ts  nativeInit.ts  platform.ts  profile.ts  push.ts  stats.ts  updateChecker.ts  updater.ts  useIsAdmin.ts  useUserSpheres.ts  userAgent.ts
src/pages/: Auth.tsx  DesktopAuth.tsx  Index.tsx  Install.tsx  Landing.tsx  Onboarding.tsx  ResetPassword.tsx
src/types/: lifeMap.ts
supabase/: config.toml
supabase/migrations/: 20260417140220_50bb6459-c2a8-4cfe-9d88-2b91ac0aa08b.sql  20260417141514_a3bb6b12-d031-41b2-9b1a-9c37835147b3.sql  20260417141841_4129c2b0-a273-4711-8b3e-eb397721d3c2.sql  20260417142758_1a7fb093-d110-438c-bfce-9acf55957e0c.sql  20260417144839_359ceab6-aef3-43e6-b3d3-9f1a27816dc8.sql  20260417145427_dd9e4d21-0ecc-4c30-90df-a629484c79c2.sql  20260417154156_9cdde207-4e8c-422b-a7a2-9b989be1c6a6.sql  20260417154854_ed6d113b-7543-4dde-ad52-f3dc5911f99a.sql  20260417154916_1993f640-3b6d-4f6a-af37-b6520b4865f9.sql  (+15 more)
(+76 files in other folders)
